[gd_scene load_steps=2 format=2]

[ext_resource path="res://gallery/Gallery.gd" type="Script" id=1]

[node name="Gallery" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 7966.0
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 14.0
size_flags_vertical = 0
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 9046.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColLeft" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 478.0
margin_bottom = 9046.0
size_flags_horizontal = 3

[node name="ColMid" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 482.0
margin_right = 1438.0
margin_bottom = 9046.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ColRight" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 1442.0
margin_right = 1920.0
margin_bottom = 9046.0
size_flags_horizontal = 3
